--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,10 @@
-# LiveKit dependencies
-livekit>=0.12.0
-livekit-agents==0.8.0
-livekit-plugins-openai==0.6.0
-
-# Groq
+certifi==2025.10.5
+firebase_admin==6.5.0
+Flask==3.1.2
 groq==0.33.0
-
-# Firebase
-firebase-admin==6.5.0
-
-# Web framework for supervisor UI
-flask==3.0.0
-flask-cors==4.0.0
-
-# Utilities
-python-dotenv==1.0.0
-requests==2.31.0
-pydantic==2.5.0
+livekit==1.0.17
+livekit_api==1.0.7
+livekit_blingfire==1.0.0
+livekit_protocol==1.0.8
+pydantic==2.12.3
+python-dotenv==1.1.1
